--- a/TestArtur/Views/Blogs/Create.cshtml
+++ b/TestArtur/Views/Blogs/Create.cshtml
@@ -18,7 +18,7 @@
                 <span asp-validation-for="Zagolovok" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Opisanie" class="control-label"></label>
+                <label asp-for="Opisanie" class="control-label">Описание</label>
                 <input asp-for="Opisanie" class="form-control" />
                 <span asp-validation-for="Opisanie" class="text-danger"></span>
             </div>
